Make the callback from JavaScript dialogs even when closing a WebContents.

Otherwise, other WebContentses sharing that render process will hang.

The reason the code didn't do this before was because I had been afraid that doing the callback would crash. Therefore, this CL adds a test JavaScriptDialogTest.ClosingPageWithSubframeAlertingDoesntCrash to make sure the crash doesn't happen. (It doesn't; my fears were unfounded.) The other new test, JavaScriptDialogTest.ClosingPageSharingRendererDoesntHang, tests for the bug, and passes with this fix.

BUG=682060
TEST=as noted

Review-Url: https://codereview.chromium.org/2641173004
Cr-Commit-Position: refs/heads/master@{#444874}

Former-commit-id: 2de41893d8301d98cfc64a3691672d2197e9a4f3